[package]
name = "dla-simulation"
version = "0.0.2"
edition = "2021"
description = "Diffusion-Limited Aggregation simulation in the terminal"
authors = ["johno"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
